--- a/package.json
+++ b/package.json
@@ -8,18 +8,32 @@
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint --ext .js,.ts,.tsx --ignore-path .gitignore .",
+    "test": "jest"
   },
   "dependencies": {
     "ky": "^0.30.0",
     "p-queue": "^6.6.2",
-    "preact": "^10.7.2"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.5",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "jest": "^28.1.0",
     "parcel": "^2.5.0",
-    "tailwindcss": "^3.0.24"
-  },
-  "alias": {
-    "preact/jsx-dev-runtime": "preact/jsx-runtime"
+    "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.4"
   }
 }
