--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^28.1.0",
     "parcel": "^2.5.0",
     "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.10",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4"
   }
