--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   "extends": [
     "airbnb",
     "airbnb/hooks",
+    "plugin:import/typescript",
     "plugin:jest/recommended",
     "plugin:prettier/recommended",
     "plugin:@typescript-eslint/recommended"
@@ -15,6 +16,7 @@
     "simple-import-sort"
   ],
   "rules": {
+    "import/extensions": ["error", { "js": "never", "json": "always", "ts": "never" }],
     "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error"
