--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
     "ky": "^0.30.0",
     "p-queue": "^6.6.2",
     "react": "^18.1.0",
