--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "clsx": "^1.1.1",
     "ky": "^0.30.0",
     "p-queue": "^6.6.2",
