--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   "extends": [
     "airbnb",
     "airbnb/hooks",
+    "plugin:react/jsx-runtime",
     "plugin:import/typescript",
     "plugin:jest/recommended",
     "plugin:prettier/recommended",
