--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
+          cache: npm
       - name: Install dependencies
         run: npm ci
       - name: Build
@@ -25,6 +26,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
+          cache: npm
       - name: Install dependencies
         run: npm ci
       - name: Run lint checks
@@ -36,6 +38,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
+          cache: npm
       - name: Install dependencies
         run: npm ci
       - name: Run prettier
@@ -47,6 +50,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
+          cache: npm
       - name: Install dependencies
         run: npm ci
       - name: Run tests
