--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.4",
     "clsx": "^1.1.1",
     "ky": "^0.30.0",
+    "lodash": "^4.17.21",
     "p-queue": "^6.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
