--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -55,3 +55,15 @@ jobs:
         run: npm ci
       - name: Run tests
         run: npm run test
+  typecheck:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: npm
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm run typecheck
