--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "lint": "eslint --ext .js,.mjs,.ts,.tsx --ignore-path .gitignore . --max-warnings 0",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint --ext .js,.ts,.tsx --ignore-path .gitignore . --max-warnings 0",
     "test": "jest"
   },
   "dependencies": {
@@ -23,6 +24,8 @@
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.2.197",
+    "@swc/jest": "^0.2.21",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@types/chance": "^1.1.3",
@@ -47,7 +50,6 @@
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.10",
     "tailwindcss": "^3.0.24",
-    "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
   }
 }
