--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "parcel": "^2.5.0",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.10",
+    "process": "^0.11.10",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4"
   }
